--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,262 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<title>deck app</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <title>Deck app</title>
 </head>
 <body>
-	<p><button id="post">Post</button></p>
-	<p><button id="get">Get</button></p>
-	<div id="result"></div>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script>
+  <div class="container">
+    <h1>Game</h1>
+
+    <div class="border p-2">
+      <h2>New Game</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonNewGame" class="btn btn-primary" type="button">POST</button>
+            <span class="input-group-text">/games</span>
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultNewGame" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>List Game</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonListGame" class="btn btn-primary" type="button">GET</button>
+            <span class="input-group-text">/games</span>
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultListGame" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Select Game</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonSelectGame" class="btn btn-primary" type="button">GET</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputSelectGame" class="form-control" type="text" placeholder="id">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultSelectGame" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Delete Game</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonDeleteGame" class="btn btn-primary" type="button">DELETE</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputDeleteGame" class="form-control" type="text" placeholder="id">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultDeleteGame" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h1>Hand</h1>
+
+    <div class="border p-2">
+      <h2>Select Hand</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonSelectHand" class="btn btn-primary" type="button">GET</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputSelectHand" class="form-control" type="text" placeholder="id">
+            <span class="input-group-text">/players/</span>
+            <input id="inputSelectHandPlayer" class="form-control" type="text" placeholder="pid">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultSelectHand" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Select Card</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonSelectCard" class="btn btn-primary" type="button">GET</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputSelectCardHand" class="form-control" type="text" placeholder="id">
+            <span class="input-group-text">/players/</span>
+            <input id="inputSelectCardPlayer" class="form-control" type="text" placeholder="pid">
+            <span class="input-group-text">/cards/</span>
+            <input id="inputSelectCard" class="form-control" type="text" placeholder="cid">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultSelectCard" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Draw</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonDraw" class="btn btn-primary" type="button">PUT</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputDraw" class="form-control" type="text" placeholder="id">
+            <span class="input-group-text">/players/</span>
+            <input id="inputDrawPlayer" class="form-control" type="text" placeholder="pid">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultDraw" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Recycle</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonRecycle" class="btn btn-primary" type="button">PUT</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputRecycle" class="form-control" type="text" placeholder="id">
+            <span class="input-group-text">/players/</span>
+            <input id="inputRecyclePlayer" class="form-control" type="text" placeholder="pid">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultRecycle" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Discard Card</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonDiscardCard" class="btn btn-primary" type="button">PUT</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputDiscardCardHand" class="form-control" type="text" placeholder="id">
+            <span class="input-group-text">/players/</span>
+            <input id="inputDiscardCardPlayer" class="form-control" type="text" placeholder="pid">
+            <span class="input-group-text">/cards/</span>
+            <input id="inputDiscardCard" class="form-control" type="text" placeholder="cid">
+            <span class="input-group-text">/discard</span>
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultDiscardCard" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Pass Card</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonPassCard" class="btn btn-primary" type="button">PUT</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputPassCardHand" class="form-control" type="text" placeholder="id">
+            <span class="input-group-text">/players/</span>
+            <input id="inputPassCardPlayer" class="form-control" type="text" placeholder="pid">
+            <span class="input-group-text">/cards/</span>
+            <input id="inputPassCard" class="form-control" type="text" placeholder="cid">
+            <span class="input-group-text">/pass/</span>
+            <input id="inputPassCardToPlayer" class="form-control" type="text" placeholder="tid">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultPassCard" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="border p-2">
+      <h2>Pick Card</h2>
+      <div class="row">
+        <div class="col-md">
+          <div class="input-group mb-3">
+            <button id="buttonPickCard" class="btn btn-primary" type="button">PUT</button>
+            <span class="input-group-text">/games/</span>
+            <input id="inputPickCardHand" class="form-control" type="text" placeholder="id">
+            <span class="input-group-text">/players/</span>
+            <input id="inputPickCardPlayer" class="form-control" type="text" placeholder="pid">
+            <span class="input-group-text">/pick/</span>
+            <input id="inputPickCardToPlayer" class="form-control" type="text" placeholder="tid">
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">result</span>
+  	      <textarea id="resultPickCard" class="form-control"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
 $(function () {
-	$("#post").click(function (event) {
-		$.ajax({
+	function ajax(settings, resultSelector) {
+		$.ajax(settings)
+		.done(function (data) {
+			$(resultSelector).html(JSON.stringify(data, null, 2));
+		})
+		.fail(function (jqXHR, textStatus, errorThrown) {
+			$(resultSelector).html(errorThrown);
+		});
+	}
+
+	function parse(settings, resultSelector) {
+		const data = {};
+		for (const [key, selector] of Object.entries(settings)) {
+			data[key] = $(selector).val();
+			if (false === /^\d+$/.test(data[key])) {
+				$(resultSelector).html(key + " is empty");
+				return undefined;
+			}
+		}
+		return data;
+	}
+
+	$("#buttonNewGame").click(function (event) {
+		ajax({
 			type: "POST",
 			url: "/games",
 			data: JSON.stringify({
@@ -20,30 +264,146 @@ $(function () {
 			}),
 			contentType: "application/json",
 			dataType: "json"
-		})
-		.done(function (data) {
-			console.log(data);
-			$("#result").html(JSON.stringify(data));
-		})
-		.fail(function (jqXHR, textStatus, errorThrown) {
-			console.log(errorThrown);
-		});
+		}, "#resultNewGame");
 	});
-	$("#get").click(function (event) {
-		$.ajax({
+
+	$("#buttonListGame").click(function (event) {
+		ajax({
 			type: "GET",
 			url: "/games",
 			dataType: "json"
-		})
-		.done(function (data) {
-			console.log(data);
-			$("#result").html(JSON.stringify(data));
-		})
-		.fail(function (jqXHR, textStatus, errorThrown) {
-			console.log(errorThrown);
-		});
+		}, "#resultListGame");
+	});
+
+	$("#buttonSelectGame").click(function (event) {
+		const data = parse({
+			id: "#inputSelectGame"
+		}, "#resultSelectGame");
+		if (undefined !== data) {
+			ajax({
+				type: "GET",
+				url: "/games/" + data.id,
+				dataType: "json"
+			}, "#resultSelectGame");
+		}
+	});
+
+	$("#buttonDeleteGame").click(function (event) {
+		const data = parse({
+			id: "#inputDeleteGame"
+		}, "#resultDeleteGame");
+		if (undefined !== data) {
+			ajax({
+				type: "DELETE",
+				url: "/games/" + data.id,
+				dataType: "json"
+			}, "#resultDeleteGame");
+		}
+	});
+
+	$("#buttonSelectHand").click(function (event) {
+		const data = parse({
+			id: "#inputSelectHand",
+			pid: "#inputSelectHandPlayer"
+		}, "#resultSelectHand");
+		if (undefined !== data) {
+			ajax({
+				type: "GET",
+				url: "/games/" + data.id + "/players/" + data.pid,
+				dataType: "json"
+			}, "#resultSelectHand");
+		}
+	});
+
+	$("#buttonSelectCard").click(function (event) {
+		const data = parse({
+			id: "#inputSelectCardHand",
+			pid: "#inputSelectCardPlayer",
+			cid: "#inputSelectCard"
+		}, "#resultSelectCard");
+		if (undefined !== data) {
+			ajax({
+				type: "GET",
+				url: "/games/" + data.id + "/players/" + data.pid + "/cards/" + data.cid,
+				dataType: "json"
+			}, "#resultSelectCard");
+		}
+	});
+
+	$("#buttonDraw").click(function (event) {
+		const data = parse({
+			id: "#inputDraw",
+			pid: "#inputDrawPlayer"
+		}, "#resultDraw");
+		if (undefined !== data) {
+			ajax({
+				type: "PUT",
+				url: "/games/" + data.id + "/players/" + data.pid + "/draw",
+				dataType: "json"
+			}, "#resultDraw");
+		}
+	});
+
+	$("#buttonRecycle").click(function (event) {
+		const data = parse({
+			id: "#inputRecycle",
+			pid: "#inputRecyclePlayer"
+		}, "#resultRecycle");
+		if (undefined !== data) {
+			ajax({
+				type: "PUT",
+				url: "/games/" + data.id + "/players/" + data.pid + "/recycle",
+				dataType: "json"
+			}, "#resultRecycle");
+		}
+	});
+
+	$("#buttonDiscardCard").click(function (event) {
+		const data = parse({
+			id: "#inputDiscardCardHand",
+			pid: "#inputDiscardCardPlayer",
+			cid: "#inputDiscardCard"
+		}, "#resultDiscardCard");
+		if (undefined !== data) {
+			ajax({
+				type: "PUT",
+				url: "/games/" + data.id + "/players/" + data.pid + "/cards/" + data.cid + "/discard",
+				dataType: "json"
+			}, "#resultDiscardCard");
+		}
+	});
+
+	$("#buttonPassCard").click(function (event) {
+		const data = parse({
+			id: "#inputPassCardHand",
+			pid: "#inputPassCardPlayer",
+			cid: "#inputPassCard",
+			tid: "#inputPassCardToPlayer"
+		}, "#resultPassCard");
+		if (undefined !== data) {
+			ajax({
+				type: "PUT",
+				url: "/games/" + data.id + "/players/" + data.pid + "/cards/" + data.cid + "/pass/" + data.tid,
+				dataType: "json"
+			}, "#resultPassCard");
+		}
+	});
+
+	$("#buttonPickCard").click(function (event) {
+		const data = parse({
+			id: "#inputPickCardHand",
+			pid: "#inputPickCardPlayer",
+			tid: "#inputPickCardToPlayer"
+		}, "#resultPickCard");
+		if (undefined !== data) {
+			ajax({
+				type: "PUT",
+				url: "/games/" + data.id + "/players/" + data.pid + "/pick/" + data.tid,
+				dataType: "json"
+			}, "#resultPickCard");
+		}
 	});
 });
-	</script>
+  </script>
 </body>
 </html>
