--- a/public/admin.html
+++ b/public/admin.html
@@ -94,91 +94,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/utils.js"></script>
-  <script>
-$(document).ready(function () {
-	function updateDeleteGame(data) {
-		$("#deleteGameSelect").empty();
-		for (const game of data.games) {
-			appendOption("#deleteGameSelect", game, game);
-		}
-	}
-
-	function appendDeleteGame(id) {
-		appendOption("#deleteGameSelect", id, id);
-	}
-
-	function removeDeleteGame(id) {
-		removeOption("#deleteGameSelect", id);
-	}
-
-    $("#listGames").click(function () {
-		$.ajax({
-			type: "GET",
-			url: "/games",
-			dataType: "json"
-		})
-		.done(function (data) {
-			status(JSON.stringify(data, null, 2));
-			updateDeleteGame(data);
-		})
-		.fail(function (jqXHR, textStatus, errorThrown) {
-			status(errorThrown);
-		});
-	});
-
-    $("#newGame").click(function () {
-		const data = parseEach({
-			players: "input[name^=players]"
-		});
-		if (undefined !== data) {
-			$.ajax({
-				type: "POST",
-				url: "/games",
-				data: JSON.stringify({
-					players: data.players
-				}),
-				contentType: "application/json",
-				dataType: "json"
-			})
-			.done(function (data) {
-				status("new game id = " + data.id);
-				appendDeleteGame(data.id);
-			})
-			.fail(function (jqXHR, textStatus, errorThrown) {
-				status(errorThrown);
-			});
-		}
-    });
-
-    $("#deleteGame").click(function () {
-        const data = parse({
-            id: "#deleteGameSelect"
-        });
-        if (undefined !== data) {
-            $.ajax({
-                type: "DELETE",
-                url: "/games/" + data.id,
-                dataType: "json"
-            })
-			.done(function (data) {
-				status("deleted game id = " + data.id);
-				removeDeleteGame(data.id);
-			})
-			.fail(function (jqXHR, textStatus, errorThrown) {
-				status(errorThrown);
-			});
-        }
-    });
-
-	$(".add").click(function () {
-		const html = $(".copy").html();
-		$("#players").parent().append(html);
-	});
-
-	$("#players").parent().on("click", ".remove", function() {
-		$(this).parents(".input-group").remove();
-	});
-});
-  </script>
+  <script src="/admin.js"></script>
 </body>
 </html>
