Mod: add pick/pass

--- a/public/admin.html
+++ b/public/admin.html
@@ -18,12 +18,12 @@
     <div class="border p-2">
       <h2>Status</h2>
       <div class="row">
-        <div class="col-md">
+        <div class="col">
           <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#status">collapse</button>
         </div>
       </div>
       <div class="row">
-        <div id="status" class="col-md collapse">
+        <div id="status" class="col collapse">
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
     <div class="border p-2">
       <h2>List Games</h2>
       <div class="row">
-        <div class="col-md">
+        <div class="col">
           <div class="input-group mb-3">
             <button id="listGames" class="btn btn-primary" type="button">GET</button>
             <span class="input-group-text">/games</span>
@@ -43,7 +43,7 @@
     <div class="border p-2">
       <h2>New Game</h2>
       <div class="row">
-        <div class="col-md">
+        <div class="col">
           <div class="input-group mb-3">
             <button id="newGame" class="btn btn-primary" type="button">POST</button>
             <span class="input-group-text">/games</span>
@@ -76,7 +76,7 @@
     <div class="border p-2">
       <h2>Delete Game</h2>
       <div class="row">
-        <div class="col-md">
+        <div class="col">
           <div class="input-group mb-3">
             <button id="deleteGame" class="btn btn-primary" type="button">DELETE</button>
             <span class="input-group-text">/games/</span>
