--- a/public/play.html
+++ b/public/play.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="row">
-        <div id="status" class="col-md collapse">
+        <div id="status" class="col collapse">
         </div>
       </div>
     </div>
@@ -54,29 +54,37 @@
       <div class="row">
         <div id="deck" class="col-3">
         </div>
-		<div class="col-3"></div>
+        <div class="col-3"></div>
         <div id="pile" class="col-3">
         </div>
-		<div class="col-3"></div>
+        <div class="col-3"></div>
       </div>
-    </div>
-
-    <div class="border p-2">
-      <h2>List Games</h2>
+      <h2>Players</h2>
       <div class="row">
-        <div class="col-md">
+        <div class="col">
           <div class="input-group mb-3">
-            <button id="listGames" class="btn btn-primary" type="button">GET</button>
-            <span class="input-group-text">/games</span>
+            <button id="pick" type="button" class="btn btn-primary">Pick from</button>
+            <select id="pickSelect" class="form-select">
+              <option selected>Select player</option>
+            </select>
           </div>
         </div>
       </div>
     </div>
 
     <div class="border p-2">
+      <h2>List Games</h2>
+      <div class="row">
+        <div class="col">
+          <div class="input-group mb-3">
+            <button id="listGames" class="btn btn-primary" type="button">GET</button>
+            <span class="input-group-text">/games</span>
+          </div>
+        </div>
+      </div>
       <h2>Select Game</h2>
       <div class="row">
-        <div class="col-md">
+        <div class="col">
           <div class="input-group mb-3">
             <button id="selectGame" class="btn btn-primary" type="button">GET</button>
             <span class="input-group-text">/games/</span>
@@ -86,12 +94,9 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="border p-2">
       <h2>Select Player</h2>
       <div class="row">
-        <div class="col-md">
+        <div class="col">
           <div class="input-group mb-3">
             <button id="selectPlayer" class="btn btn-primary" type="button">GET</button>
             <span class="input-group-text">/games/</span>
@@ -123,6 +128,16 @@
                   </div>
                 </div>
                 <div class="row">
+                  <div class="col">
+                    <div class="input-group mb-3">
+                      <button id="passHand" type="button" class="btn btn-primary">Pass to</button>
+                      <select id="passHandSelect" class="form-select">
+                        <option selected>Select player</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
                   <div class="col mb-3">
                     <button type="button" class="btn btn-secondary">Cancel</button>
                   </div>
@@ -143,7 +158,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col">
-                <img class="img-fluid" src="/images/card_back.png">
+                <img class="img-fluid" src="/images/card_back.png" alt="">
               </div>
               <div class="col">
                 <div class="row">
