--- a/public/play.html
+++ b/public/play.html
@@ -121,6 +121,9 @@
   <div class="modal fade" id="handModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
+        <div class="modal-header">
+          <h5>Hand</h5>
+        </div>
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
@@ -154,10 +157,13 @@
     </div>
   </div>
 
-  <!-- Modal: draw -->
-  <div class="modal fade" id="drawModal" tabindex="-1" role="dialog">
+  <!-- Modal: deck -->
+  <div class="modal fade" id="deckModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
+        <div class="modal-header">
+          <h5>Deck</h5>
+        </div>
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
@@ -187,6 +193,9 @@
   <div class="modal fade" id="pileModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
+        <div class="modal-header">
+          <h5>Pile</h5>
+        </div>
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
